manifests/applications/keycloak/routes.yaml
# Kong HTTPRoute for Keycloak
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  parentRefs:
  - name: kong-gateway
    namespace: kong
  hostnames:
  - auth.happyvertical.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keycloak-service
      port: 8080
